# goit_web_HW11

./: .env.example  README.md  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/versions/: 086cd2c659dd_init.py  2ab1f87a8137_init.py  671d45305f76_add_conf_users.py  67bccaa219ff_add_table_users.py  ace899c28fec_init.py  dff7db69dda4_init.py  f6ea76d7e46e_init.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16387  16390  16419  16429  16430  16435  16436  16438  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
src/conf/: config.py  messages.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_unit_repositopy_contacts.py  test_unit_repository_users.py
